--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "postcss": "^8",
     "prettier": "^3.0.0",
     "sass": "^1.71.1",
+    "sharp": "^0.33.2",
     "stylelint": "^16.2.1",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.0.0",
