--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint:ci": "concurrently \"yarn lint:code\" \"yarn lint:css\""
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -22,6 +23,7 @@
     "autoprefixer": "10.4.16",
     "axios": "1.6.0",
     "classnames": "^2.3.2",
+    "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
