--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "stylelint-scss": "^6.1.0",
     "tailwindcss": "^3.3.0",
     "ts-custom-error": "^3.3.1",
+    "type-fest": "^4.10.3",
     "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^1.2.0"
   }
